# binance_scalper

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/: main.py  strategy.py
python/backtest/: download.py  engine.py  feed.py  report.py  run.py
python/data/: MATICUSDT_1m.csv
python/results/: ADAUSDT.csv  AVAXUSDT.csv  BNBUSDT.csv  BTCUSDT.csv  DOGEUSDT.csv  ETHUSDT.csv  LINKUSDT.csv  SOLUSDT.csv  XRPUSDT.csv
src/: execution.rs  lib.rs  rate_limiter.rs  types.rs  websocket.rs
